# Case_Study_1_Group_6

./: .gitignore  Dockerfile  README.md  app.py  automated_deployment.sh  automated_deployment_fixed.sh  cronjob  main.py  monitor.sh  pyproject.toml  requirements.txt
.github/workflows/: hf-sync.yml  main.yml  slack1.yml  test-models.yml  test.yml  test2.yml
Prometheus/: prometheus.yml
tests/: api_test.py  local_test.py
