[project]
name = "case-study-1-group-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "huggingface-hub>=0.36.0",
    "prometheus-client>=0.23.1",
    "pytest>=8.4.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
